--- a/src/public/sass/main.scss
+++ b/src/public/sass/main.scss
@@ -3,3 +3,7 @@
 @import 'base/global';
 @import 'component/global';
 @import 'layout/global';
+
+.opacity20 {
+  opacity: 0.2;
+}
